[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/editor/Dialogue_edit_file_ops.gd" type="Script" id=1]
[ext_resource path="res://src/editor/ItemEventPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/editor/DialougeEditor.gd" type="Script" id=3]
[ext_resource path="res://src/editor/VariableEventPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/editor/wildText.gd" type="Script" id=5]
[ext_resource path="res://src/editor/Edit_Choice.gd" type="Script" id=6]

[node name="Dialogue editor window" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.000152588
margin_right = -0.00012207
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue_edit_file_ops" type="Control" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 640.0
rect_min_size = Vector2( 100, 100 )
script = ExtResource( 1 )

[node name="Load_Dialogue" type="FileDialog" parent="HBoxContainer/Dialogue_edit_file_ops"]
visible = true
margin_left = -559.444
margin_top = 151.835
margin_right = -115.444
margin_bottom = 281.835
rect_min_size = Vector2( 300, 105 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.book.tres" )
current_dir = "/home/kvagram/Documents/projects/AdventureQuests/game"
current_path = "/home/kvagram/Documents/projects/AdventureQuests/game/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save_Dialogue" type="FileDialog" parent="HBoxContainer/Dialogue_edit_file_ops"]
visible = true
margin_left = -560.0
margin_top = 321.0
margin_right = -116.0
margin_bottom = 451.0
rect_min_size = Vector2( 300, 105 )
window_title = "Save Dialogue"
resizable = true
access = 2
current_dir = "/home/kvagram/Documents/projects/AdventureQuests/game"
current_path = "/home/kvagram/Documents/projects/AdventureQuests/game/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="File operations" type="VBoxContainer" parent="HBoxContainer/Dialogue_edit_file_ops"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -572.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Dialogue" type="Button" parent="HBoxContainer/Dialogue_edit_file_ops/File operations"]
margin_right = 100.0
margin_bottom = 20.0
text = "New Dialogue"

[node name="Load External" type="Button" parent="HBoxContainer/Dialogue_edit_file_ops/File operations"]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 44.0
text = "Load External"

[node name="Save External" type="Button" parent="HBoxContainer/Dialogue_edit_file_ops/File operations"]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 68.0
text = "Save External"

[node name="Load Internal" type="Button" parent="HBoxContainer/Dialogue_edit_file_ops/File operations"]
margin_top = 72.0
margin_right = 100.0
margin_bottom = 92.0
text = "Load Internal"

[node name="Save Internal" type="Button" parent="HBoxContainer/Dialogue_edit_file_ops/File operations"]
margin_top = 96.0
margin_right = 100.0
margin_bottom = 116.0
text = "Save Internal"

[node name="Dialouge Inner editor" type="TabContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 1004.0
margin_bottom = 640.0
rect_min_size = Vector2( 900, 200 )
tab_align = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Tabs" parent="HBoxContainer/Dialouge Inner editor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Settings"]
margin_top = 3.0
margin_right = 879.0
margin_bottom = 43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_right = 879.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 140.0
margin_bottom = 19.0
text = "Dialogue/book name: "

[node name="DialogueName" type="LineEdit" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 202.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_top = 28.0
margin_right = 879.0
margin_bottom = 48.0

[node name="LoadAudiofile" type="Button" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2"]
margin_right = 101.0
margin_bottom = 20.0
text = "Load audiofile"

[node name="TestAudioFull" type="Button" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2"]
margin_left = 105.0
margin_right = 170.0
margin_bottom = 20.0
text = "Testplay"

[node name="AudioStop" type="Button" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2"]
margin_left = 174.0
margin_right = 214.0
margin_bottom = 20.0
text = "stop"

[node name="AudioPath" type="Label" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2"]
margin_left = 218.0
margin_top = 3.0
margin_right = 218.0
margin_bottom = 17.0

[node name="Label" type="Label" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_top = 52.0
margin_right = 879.0
margin_bottom = 83.0
text = "Wild raw text input area.
Write or drag'n'drop textfile here"

[node name="wildText" type="TextEdit" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_top = 87.0
margin_right = 879.0
margin_bottom = 387.0
rect_min_size = Vector2( 200, 300 )
wrap_enabled = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WildTextHandlers" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_top = 391.0
margin_right = 879.0
margin_bottom = 411.0

[node name="Clear_Wildcard" type="Button" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/WildTextHandlers"]
margin_right = 44.0
margin_bottom = 20.0
text = "Clear"

[node name="Load_Audacity_labels" type="Button" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/WildTextHandlers"]
margin_left = 48.0
margin_right = 209.0
margin_bottom = 20.0
text = "Load as Audacity labels"

[node name="Err label label" type="Label" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_top = 415.0
margin_right = 879.0
margin_bottom = 429.0
text = "Any errors will show below"

[node name="Label2" type="Label" parent="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer"]
margin_top = 433.0
margin_right = 879.0
margin_bottom = 464.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Error: no error
(this is a joke)"

[node name="LoadAudio" type="FileDialog" parent="HBoxContainer/Dialouge Inner editor/Settings"]
margin_left = 422.856
margin_top = 87.7803
margin_right = 1032.86
margin_bottom = 359.78
rect_min_size = Vector2( 300, 105 )
window_title = "Open a File or Directory"
mode = 3
access = 2
filters = PoolStringArray( "*.wav", "*.ogg", "*.mp3" )
current_dir = "/home/kvagram/Documents/projects/AdventureQuests/game"
current_path = "/home/kvagram/Documents/projects/AdventureQuests/game/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit book" type="Tabs" parent="HBoxContainer/Dialouge Inner editor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book"]
margin_left = 7.18921
margin_top = 1.18921
margin_right = 1013.19
margin_bottom = 559.189
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label - Page edit" type="Label" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer"]
margin_right = 1006.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "EDIT PAGE"

[node name="Dialogue editor panel" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer"]
margin_top = 24.0
margin_right = 1006.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controller" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel"]
margin_right = 50.0
margin_bottom = 94.0
rect_min_size = Vector2( 50, 50 )

[node name="lineIndex" type="Label" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Controller"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 20 )
text = "0"
align = 1
valign = 1

[node name="prev" type="Button" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Controller"]
margin_top = 24.0
margin_right = 50.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 30 )
text = "Prev"

[node name="next" type="Button" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Controller"]
margin_top = 58.0
margin_right = 50.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 30 )
text = "next"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel"]
margin_left = 54.0
margin_right = 604.0
margin_bottom = 94.0
rect_min_size = Vector2( 50, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character_name" type="LineEdit" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/VBoxContainer"]
margin_right = 550.0
margin_bottom = 24.0
rect_min_size = Vector2( 550, 20 )
placeholder_text = "Name Namerson the Third"

[node name="Dialogue_box" type="TextEdit" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/VBoxContainer"]
margin_top = 28.0
margin_right = 550.0
margin_bottom = 88.0
rect_min_size = Vector2( 550, 60 )

[node name="Aux data" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel"]
margin_left = 608.0
margin_right = 860.0
margin_bottom = 94.0

[node name="Tag" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data"]
margin_right = 252.0
margin_bottom = 24.0

[node name="Tag" type="Label" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/Tag"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
text = "Tag-name"

[node name="TagName" type="LineEdit" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/Tag"]
margin_left = 66.0
margin_right = 146.0
margin_bottom = 24.0
rect_min_size = Vector2( 80, 0 )
placeholder_text = "tag (optional)"

[node name="Label" type="Label" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data"]
margin_top = 28.0
margin_right = 252.0
margin_bottom = 42.0
text = "Audio/voice acting (secunds)"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data"]
margin_top = 46.0
margin_right = 252.0
margin_bottom = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/HBoxContainer"]
margin_top = 5.0
margin_right = 47.0
margin_bottom = 19.0
text = "Start_at"

[node name="audio_start_at" type="SpinBox" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/HBoxContainer"]
margin_left = 51.0
margin_right = 125.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.1
suffix = "s"

[node name="Label2" type="Label" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/HBoxContainer"]
margin_left = 129.0
margin_top = 5.0
margin_right = 174.0
margin_bottom = 19.0
text = "End_at "

[node name="audio_end_at" type="SpinBox" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/HBoxContainer"]
margin_left = 178.0
margin_right = 252.0
margin_bottom = 24.0
max_value = 9999.0
step = 0.1
suffix = "s"

[node name="TestAudioLine" type="Button" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data"]
margin_top = 74.0
margin_right = 252.0
margin_bottom = 94.0
text = "Play-test audio"

[node name="ActionMenu" type="HBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer"]
margin_top = 122.0
margin_right = 1006.0
margin_bottom = 346.0

[node name="Add event" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu"]
margin_right = 220.0
margin_bottom = 224.0
rect_min_size = Vector2( 220, 0 )

[node name="Button" type="Button" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Add event"]
margin_right = 220.0
margin_bottom = 20.0
text = "+ Add event"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Add event"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 224.0
rect_min_size = Vector2( 0, 200 )

[node name="EventPanel container" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Add event/ScrollContainer"]

[node name="EventPanel" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Add event/ScrollContainer/EventPanel container" instance=ExtResource( 2 )]
margin_right = 0.0

[node name="Set variable" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu"]
margin_left = 224.0
margin_right = 444.0
margin_bottom = 224.0

[node name="Button" type="Button" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Set variable"]
margin_right = 220.0
margin_bottom = 20.0
text = "+ Add set variable"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Set variable"]
margin_top = 24.0
margin_right = 220.0
margin_bottom = 224.0
rect_min_size = Vector2( 220, 200 )

[node name="EventPanel container" type="VBoxContainer" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Set variable/ScrollContainer"]

[node name="Add or Remove item" parent="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/ActionMenu/Set variable/ScrollContainer/EventPanel container" instance=ExtResource( 4 )]
margin_right = 0.0

[node name="TestaudioPlayer" type="AudioStreamPlayer" parent="HBoxContainer/Dialouge Inner editor"]

[node name="Edit_Choice" type="WindowDialog" parent="."]
visible = true
margin_left = 1027.0
margin_top = 24.0
margin_right = 1555.0
margin_bottom = 270.0
popup_exclusive = true
window_title = "Edit choice"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Edit_Choice"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content 1" type="VBoxContainer" parent="Edit_Choice/HBoxContainer"]
margin_right = 208.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="displayname" type="HBoxContainer" parent="Edit_Choice/HBoxContainer/content 1"]
margin_right = 208.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Edit_Choice/HBoxContainer/content 1/displayname"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 19.0
text = "Display name: "

[node name="set_displayname" type="LineEdit" parent="Edit_Choice/HBoxContainer/content 1/displayname"]
margin_left = 99.0
margin_right = 199.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "New option"

[node name="Label" type="Label" parent="Edit_Choice/HBoxContainer/content 1"]
margin_top = 28.0
margin_right = 208.0
margin_bottom = 42.0
text = "Add conditions or actions"

[node name="Panel" type="Panel" parent="Edit_Choice/HBoxContainer/content 1"]
margin_top = 46.0
margin_right = 208.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 170 )

[node name="ItemList" type="ItemList" parent="Edit_Choice/HBoxContainer/content 1/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -21.0
items = [ "Item 0", null, false, "Item 1", null, false, "Item 2", null, false, "Item 3", null, false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Edit_Choice/HBoxContainer/content 1/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -20.0

[node name="NewItemButton" type="Button" parent="Edit_Choice/HBoxContainer/content 1/Panel/HBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0, 0.776471, 1, 1 )
text = "Add new ->"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewItemTypeDroplist" type="OptionButton" parent="Edit_Choice/HBoxContainer/content 1/Panel/HBoxContainer"]
margin_left = 88.0
margin_right = 208.0
margin_bottom = 20.0
text = "( placeholder )"
flat = true

[node name="buttons" type="HBoxContainer" parent="Edit_Choice/HBoxContainer/content 1"]
margin_top = 220.0
margin_right = 208.0
margin_bottom = 240.0

[node name="Delete" type="Button" parent="Edit_Choice/HBoxContainer/content 1/buttons"]
margin_right = 110.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "DELETE CHOICE"

[node name="OK" type="Button" parent="Edit_Choice/HBoxContainer/content 1/buttons"]
margin_left = 114.0
margin_right = 208.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.396078, 1, 0, 1 )
text = "SAVE/CREATE"

[node name="content 2" type="VBoxContainer" parent="Edit_Choice/HBoxContainer"]
margin_left = 212.0
margin_right = 512.0
margin_bottom = 260.0

[node name="HBoxContainer" type="HBoxContainer" parent="Edit_Choice/HBoxContainer/content 2"]
margin_right = 300.0
margin_bottom = 20.0
alignment = 2

[node name="Label" type="Label" parent="Edit_Choice/HBoxContainer/content 2/HBoxContainer"]
margin_left = 79.0
margin_top = 3.0
margin_right = 227.0
margin_bottom = 17.0
text = "Item-descriptive-name"

[node name="VSeparator" type="VSeparator" parent="Edit_Choice/HBoxContainer/content 2/HBoxContainer"]
margin_left = 231.0
margin_right = 241.0
margin_bottom = 20.0
rect_min_size = Vector2( 10, 10 )

[node name="DelItem" type="Button" parent="Edit_Choice/HBoxContainer/content 2/HBoxContainer"]
margin_left = 245.0
margin_right = 300.0
margin_bottom = 20.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Delete"
flat = true
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditItemsPanel" type="Panel" parent="Edit_Choice/HBoxContainer/content 2"]
margin_top = 24.0
margin_right = 300.0
margin_bottom = 174.0
rect_min_size = Vector2( 300, 150 )

[node name="EditItems" type="TabContainer" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 11.0
rect_min_size = Vector2( 300, 150 )
tabs_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Variable Condition" type="VBoxContainer" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label2" type="Label" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Variable Condition"]
margin_right = 293.0
margin_bottom = 48.0
text = "Following must be true
for option to be used:
The variable"

[node name="varname" type="LineEdit" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Variable Condition"]
margin_top = 52.0
margin_right = 293.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Variable Condition"]
margin_top = 80.0
margin_right = 293.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Variable Condition/HBoxContainer"]
margin_top = 3.0
margin_right = 57.0
margin_bottom = 17.0
text = "must be "

[node name="VarOptGet" type="OptionButton" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Variable Condition/HBoxContainer"]
margin_left = 61.0
margin_right = 293.0
margin_bottom = 20.0
text = "(                placeholder              )"

[node name="valuetarget" type="LineEdit" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Variable Condition"]
margin_top = 104.0
margin_right = 293.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Set Variable" type="VBoxContainer" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label2" type="Label" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable"]
margin_right = 303.0
margin_bottom = 48.0
text = "The following will happen
When this option is chosen:
The variable"

[node name="varname" type="LineEdit" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable"]
margin_top = 52.0
margin_right = 303.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable"]
margin_top = 80.0
margin_right = 303.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable/HBoxContainer"]
margin_top = 3.0
margin_right = 42.0
margin_bottom = 17.0
text = "will be"

[node name="VarOptSet" type="OptionButton" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable/HBoxContainer"]
margin_left = 46.0
margin_right = 254.0
margin_bottom = 20.0
text = "(            placeholder            )"

[node name="Label" type="Label" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable/HBoxContainer"]
visible = false
margin_left = 258.0
margin_top = 3.0
margin_right = 303.0
margin_bottom = 17.0
text = "to/with"

[node name="valuetarget" type="LineEdit" parent="Edit_Choice/HBoxContainer/content 2/EditItemsPanel/EditItems/Set Variable"]
margin_top = 104.0
margin_right = 303.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Edit_Choice/HBoxContainer/content 2"]
margin_top = 178.0
margin_right = 300.0
margin_bottom = 243.0
text = "Options marked with * applies to number-values only. They will fail with text-values. Valuefield support text and numbers (negatives and decimals)."
autowrap = true

[connection signal="file_selected" from="HBoxContainer/Dialogue_edit_file_ops/Load_Dialogue" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_Load_Dialogue_file_selected"]
[connection signal="file_selected" from="HBoxContainer/Dialogue_edit_file_ops/Save_Dialogue" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_Save_Dialogue_file_selected"]
[connection signal="pressed" from="HBoxContainer/Dialogue_edit_file_ops/File operations/New Dialogue" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_New_Dialogue_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialogue_edit_file_ops/File operations/Load External" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_Load_External_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialogue_edit_file_ops/File operations/Save External" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_Save_External_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialogue_edit_file_ops/File operations/Load Internal" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_Load_Internal_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialogue_edit_file_ops/File operations/Save Internal" to="HBoxContainer/Dialogue_edit_file_ops" method="_on_Save_Internal_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2/LoadAudiofile" to="HBoxContainer/Dialouge Inner editor" method="_on_LoadAudiofile_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2/TestAudioFull" to="HBoxContainer/Dialouge Inner editor" method="_on_TestAudioFull_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/HBoxContainer2/AudioStop" to="HBoxContainer/Dialouge Inner editor" method="_on_AudioStop_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/WildTextHandlers/Clear_Wildcard" to="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/wildText" method="_on_Clear_Wildcard_pressed"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Settings/VBoxContainer/WildTextHandlers/Load_Audacity_labels" to="HBoxContainer/Dialouge Inner editor" method="_on_Load_Audacity_labels_pressed"]
[connection signal="file_selected" from="HBoxContainer/Dialouge Inner editor/Settings/LoadAudio" to="HBoxContainer/Dialouge Inner editor" method="_on_LoadAudio_file_selected"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Controller/prev" to="HBoxContainer/Dialouge Inner editor" method="_on_prev_line"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Controller/next" to="HBoxContainer/Dialouge Inner editor" method="_on_next_line"]
[connection signal="text_changed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/VBoxContainer/Character_name" to="HBoxContainer/Dialouge Inner editor" method="_on_Character_name_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/VBoxContainer/Dialogue_box" to="HBoxContainer/Dialouge Inner editor" method="_on_Dialouge_text_changed"]
[connection signal="text_changed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/Tag/TagName" to="HBoxContainer/Dialouge Inner editor" method="_on_TagName_text_changed"]
[connection signal="value_changed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/HBoxContainer/audio_start_at" to="HBoxContainer/Dialouge Inner editor" method="_on_audio_start_at_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/HBoxContainer/audio_end_at" to="HBoxContainer/Dialouge Inner editor" method="_on_audio_end_at_value_changed"]
[connection signal="pressed" from="HBoxContainer/Dialouge Inner editor/Edit book/VBoxContainer/Dialogue editor panel/Aux data/TestAudioLine" to="HBoxContainer/Dialouge Inner editor" method="_on_TestAudioLine_pressed"]
